bases/apps/postgres/main-cluster/pgweb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: pgweb
    app.kubernetes.io/name: pgweb
    app.kubernetes.io/service: pgweb
  name: pgweb
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: pgweb
    app.kubernetes.io/name: pgweb
  type: ClusterIP
