bases/apps/postgres/main-cluster/postgres-primary-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: primary-proxy
    app.kubernetes.io/name: primary-proxy
  name: postgres-primary-proxy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: primary-proxy
      app.kubernetes.io/name: primary-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: primary-proxy
        app.kubernetes.io/name: primary-proxy
    spec:
      serviceAccountName: postgres-primary-proxy
      containers:
      - name: tailscale
        image: ghcr.io/tailscale/tailscale:v1.52
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
      - image: tecnativa/tcp-proxy:v1.0.1
        name: tcp-proxy
---
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: primary-proxy
    app.kubernetes.io/name: primary-proxy
    app.kubernetes.io/service: primary-proxy
  name: postgresql-primary
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app.kubernetes.io/instance: primary-proxy
    app.kubernetes.io/name: primary-proxy
  type: ClusterIP
---
