bases/apps/postgres/main-cluster/main-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/name: postgres
  annotations:
   cert-manager.io/cluster-issuer: default-clusterissuer
  name: postgres-ingress
spec:
  tls:
  - hosts:
    - postgres.local
    secretName: postgres-cert
  rules:
  - host: postgres.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main
            port:
              name: postgresql
